# ragscope

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: lint.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-test-infrastructure/: 01-RESEARCH.md
.zed/: settings.json
app/: config.py  evaluate.py  health.py  ingest.py  main.py  models.py  prompts.py  query.py
docs/: api.md  architecture.md  configuration.md
scripts/ralph/: progress.txt
specs/001-add-project-docs/: plan.md  research.md  spec.md  tasks.md
specs/001-add-project-docs/contracts/: docs-structure.md
src/: config.py  evaluate.py  health.py  ingest.py  main.py  models.py  query.py  security.py
src/api/: router.py
src/services/: health.py  ingest.py  query.py
src/tracking/: setup.py
src/utils/: env.py  log_manager.py
tasks/: prd-rag-api.md  todo.md
